# MineZPRft

./: .gitignore  CMakeLists.txt  MineZPRft.sln  README.md
Data/Shaders/: MainFS.glsl  MainGS.glsl  MainVS.glsl  TerrainNaiveFS.glsl  TerrainNaiveVS.glsl
MineZPRft/: CMakeLists.txt  MineZPRft.vcxproj  MineZPRft.vcxproj.filters
MineZPRft/Common/: Common.hpp  Exception.cpp  Exception.hpp  FPSCounter.cpp  FPSCounter.hpp  FileSystem.hpp  GetExtension.hpp  Logger.cpp  Logger.hpp  TaskQueue.cpp  TaskQueue.hpp  Timer.hpp  UTFfuncs.hpp  Window.hpp  WindowTest.cpp
MineZPRft/Common/Linux/: Common.cpp  FileSystem.cpp  PrintColored.cpp  Timer.cpp  Window.cpp
MineZPRft/Common/Win/: Common.cpp  FileSystem.cpp  PrintColored.cpp  Timer.cpp  UTFfuncs.cpp  Window.cpp
MineZPRft/Game/: GameKeycodes.hpp  GameManager.cpp  GameManager.hpp  GamePlayer.cpp  GamePlayer.hpp  GameWindow.cpp  GameWindow.hpp  main.cpp
MineZPRft/Math/: Common.hpp  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp
MineZPRft/Renderer/: Camera.cpp  Camera.hpp  Common.hpp  Defines.cpp  Defines.hpp  Extensions.cpp  Extensions.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
MineZPRft/Terrain/: Chunk.cpp  Chunk.hpp  ChunkPool.cpp  ChunkPool.hpp  NoiseGenerator.cpp  NoiseGenerator.hpp  TerrainManager.cpp  TerrainManager.hpp  Voxel.cpp  Voxel.hpp
MineZPRftTest/: CMakeLists.txt  FPSCounterTest.cpp  Main.cpp  MatrixTest.cpp  MineZPRftTest.vcxproj  MineZPRftTest.vcxproj.filters  QueueTest.cpp  VectorTest.cpp
Scripts/: clean-cmake.sh  clean.sh
Var/: CMakeLists.txt
Var/PerlinNoiseGenerator/: CMakeLists.txt  Perlin.cpp  Perlin.hpp  Perlin.vcxproj  Perlin.vcxproj.filters  main.cpp
Var/WindowManager/: CMakeLists.txt  Window.hpp  WindowManager.vcxproj  WindowManager.vcxproj.filters  main.cpp  main.hpp
Var/WindowManager/Linux/: Window.cpp
Var/WindowManager/Win/: Window.cpp
gtest/: CMakeLists.txt
window_initial/: Window.hpp  WindowManager.vcxproj  WindowManager.vcxproj.filters  main.cpp  main.hpp
